    after successful validation. This is slightly different from the
    "no-cache" directive in responses, which indicates that the cache must
    first validate its entry with the origin. Previously, we implemented
    "no-cache" on requests by passing so no new cache entry would be stored
    based on the response. Now we treat it as a forced miss and enter the
    response into the cache if it's cacheable.

  * Assume identical semantics for the "Pragma: no-cache" request header
    as the "Cache-Control: no-cache" directive described above.

  * Less crazy logging. When the verbose option is set, a single log entry
    is written with a comma separated list of trace events. For example, if
    the cache was stale but validated, the following log entry would be
    written: "cache: stale, valid, store". When the verbose option is false,
    no logging occurs.

  * Added "X-Rack-Cache" response header with the same comma separated trace
    value as described above. This gives some visibility into how the cache
    processed the request.

  * Add support for canonicalized cache keys, as well as custom cache key
    generators, which are specified in the options as :cache_key as either
    any object that has a call() or as a block. Cache key generators get
    passed a request object and return a cache key string.

## 0.3.0 / December 2008

  * Add support for public and private cache control directives. Responses
    marked as explicitly public are cached even when the request includes
    an Authorization or Cookie header. Responses marked as explicitly private
    are considered uncacheable.

  * Added a "private_headers" option that dictates which request headers
    trigger default "private" cache control processing. By default, the
    Cookie and Authorization headers are included. Headers may be added or
    removed as necessary to change the default private logic.

  * Adhere to must-revalidate/proxy-revalidate cache control directives by